RESOLVED FIXED219944
[LFC][BFC] Non-quantitative values such as auto and min-content are not influenced by the box-sizing property
https://bugs.webkit.org/show_bug.cgi?id=219944
Summary [LFC][BFC] Non-quantitative values such as auto and min-content are not influ...
Attachments
Patch (5.28 KB, patch)
2020-12-16 05:52 PST, alan
no flags
Patch (5.99 KB, patch)
2020-12-16 07:17 PST, alan
no flags
alan
Comment 1 2020-12-16 05:52:30 PST
alan
Comment 2 2020-12-16 07:17:42 PST
EWS
Comment 3 2020-12-16 08:13:45 PST
Committed r270891: <https://trac.webkit.org/changeset/270891> All reviewed patches have been landed. Closing bug and clearing flags on attachment 416337 [details].
Radar WebKit Bug Importer
Comment 4 2020-12-16 08:14:22 PST
Note You need to log in before you can comment on or make changes to this bug.