[LFC][BFC] Non-quantitative values such as auto and min-content are not influenced by the box-sizing property https://bugs.webkit.org/show_bug.cgi?id=219944

Reviewed by Antti Koivisto.
Source/WebCore:

See https://www.w3.org/TR/css-sizing-3/#box-sizing

Test: fast/layoutformattingcontext/max-content-and-box-sizing-simple.html

* layout/FormattingContextGeometry.cpp:
(WebCore::Layout::FormattingContext::Geometry::computedWidth):

LayoutTests:

Need to fix it in RenderBox first to be able to geometry-test it (webkit.org/b/219687).

* fast/layoutformattingcontext/max-content-and-box-sizing-simple-expected.html: Added.
* fast/layoutformattingcontext/max-content-and-box-sizing-simple.html: Added.
* platform/mac-wk2/TestExpectations:


Canonical link: https://commits.webkit.org/232527@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270891 268f45cc-cd09-0410-ab3c-d52691b4dbfc